# qt-shop-catalog

./: CMakeLists.txt  README.md  cartwindow.h  catalogwindow.cpp  catalogwindow.h  favoriteswindow.cpp  mainwindow.cpp  mainwindow.ui  productcard.cpp  productcard.h
data/: products.db
database/: products.db
docs/: README.md  Опис проєкту.md
include/database/: database_manager.h
include/widgets/: productcard.h  productdetails.h  producteditor.h  savedpopup.h
include/windows/: cartwindow.h  catalogwindow.h  favoriteswindow.h  mainwindow.h
resources/: resources.qrc
src/: main.cpp
src/database/: database_manager.cpp
src/widgets/: productcard.cpp  productdetails.cpp  producteditor.cpp
src/windows/: cartwindow.cpp  catalogwindow.cpp  favoriteswindow.cpp  mainwindow.cpp
ui/: mainwindow.ui
